# Physical-AI-and-Humanoid-Robotics-book

./: .gitignore  404.html  DEPLOYMENT_GUIDE.md  IMPROVEMENTS.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_QUICK_START.md  RENDER_VALIDATION_REPORT.md  SETUP_GUIDE.md  START_HERE.bat  VERCEL_BEGINNER_GUIDE.md  ZED_EDITOR_GUIDE.md  chatbot.html  index.html  login.html  markdown-page.html  render.yaml  sitemap.xml  start-backend.bat  start-frontend.bat
.gemini_tmp/: module2_description.txt  module3_description.txt  module4_description.txt
.specify/memory/: constitution.md
Robotic book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
assets/css/: styles.58d7df31.css  styles.cf392e34.css
assets/js/: 02e55eb2.8412ce9b.js  0ccfc8ed.f2425cfb.js  0e82e4bb.b0a0e59d.js  153b65bb.8b01fcb2.js  17896441.a20e6af3.js  178bbed0.51d9884d.js  1df93b7f.0e493530.js  1df93b7f.6a6e2dd9.js  1ee6900b.7cc40f28.js  1f391b9e.4644ce43.js  1f391b9e.4f1743f4.js  237.044d2c21.js  237.36ddbc81.js  272c70c3.7dde9ec4.js  285.0491833e.js  30a8ad98.52ef87f9.js  34b338d8.68acfbe7.js  353ae82c.3825a45c.js  393be207.685d762f.js  45695f8e.2025fa9c.js  45b320b9.1691e220.js  4f56fcce.feab6646.js  52365164.83bd3ace.js  5e95c892.64088fc8.js  5e95c892.8665565a.js  69bd9116.b9459bab.js  819fe108.8fd08384.js  8c651bd3.9ad45feb.js  9863b985.5b292540.js  9f397a55.8e40a514.js  a4e1c505.6b21ea4e.js  a7456010.78a5d8fe.js  (+20 more)
backend/: .env.example  .gitignore  .vercelignore  README.md  app.py  create_tables.py  inspect_qdrant.py  quick_ingest.py  requirements.txt  simple_ingest.py  test_retrieval.py  test_setup.py  vercel.json
docs/: module1-ros2.html  module2-digital-twin.html  module3-ai-brain.html  module4-vla.html
examples/: humanoid.urdf  humanoid_macro_example.xacro  python_agent.py
examples/ros2_custom_message_example/robot_status_msgs/: CMakeLists.txt  package.xml
examples/ros2_custom_message_example/robot_status_msgs/msg/: RobotStatus.msg
examples/ros2_isaac_gems/isaac_ros_perception_example/: CMakeLists.txt  package.xml
examples/ros2_launch_example/humanoid_launch/: CMakeLists.txt  package.xml
examples/ros2_launch_example/humanoid_launch/launch/: humanoid_view.launch.py
(+181 files in other folders)
